--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "src/404.html",
               "src/assets"
             ],
             "styles": [
